src/blocked/blocked.css
:root {
	--primary-color: #bbd8e3;
	--secondary-color: #92adb8;
}

body {
	/* pink */
	/* background: #f4c4f3; 
  	background: -webkit-linear-gradient(to right, #f4c4f3, #fc67fa); 
  	background: linear-gradient(to right, #f4c4f3, #fc67fa); */
	  text-align: center;
	  /* background: #203a43; */
	  background: #18334A;
	  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
}
#header {
	/* background-color: rgb(62, 77, 105); */
	height: 100%;
	width: 100%;
}
#displayURL, span {
	color: var(--secondary-color);
}
h1, p {
	color: var(--primary-color);
}
#buttonAreaContainer {
	margin-top: 25%;
	
}
#buttonArea {
	margin: 0 auto;
}
#buttonArea > button{
	width: 11em;
	height: 4.5em;
	/* background-color: #3f565d; */
	/* background-color: #bf3e3e; */
	/* background-color: #3b9fbd;  */
	background-color: #170f3669;
	/* color: #68BEDB; */
	color: rgb(255, 255, 255);
	border: 2px solid black;
	border-radius: 15px;
	font-size: 1.3em;
	margin: 1em;
	/* text-transform: uppercase; */
}
#buttonArea > button:hover {
	background-color:#100a2669;
	cursor: pointer;
}
#image {
	height: 50vh;
	width: auto;
}
.white {
	color: white;
}

